[project]
name = "saas-zadania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.49",
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]
